Closed Bug 1825374 Opened 3 years ago Closed 2 years ago

TB 112b4 (and later) window is blank after importing from existing profile where hostname was set to "0.0.0.0."

Categories

(Thunderbird :: Folder and Message Lists, defect, P2)

Thunderbird 112
defect

Tracking

(thunderbird_esr102 unaffected, thunderbird_esr115 fixed, thunderbird116 affected, thunderbird118 affected)

RESOLVED FIXED
119 Branch
Tracking Status
thunderbird_esr102 --- unaffected
thunderbird_esr115 --- fixed
thunderbird116 --- affected
thunderbird118 --- affected

People

(Reporter: j.e.labarre, Assigned: mkmelin)

References

(Blocks 2 open bugs)

Details

(Keywords: regression, Whiteboard: [Supernova3p])

Attachments

(4 files)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:102.0) Gecko/20100101 Firefox/102.0

Steps to reproduce:

1: extract Thunderbird 112.0b4 to local directory (in my home directory)
2: start Thunderbird from that directory with "./thunderbird --ProfileManager"
3: create new profile, start with that profile
4: added single IMAP account to see application was working (it displayed messages as expected)
5: under "Tools -> Import", imported existing Thunderbird profile that contains multiple email accounts (a profile that has been used for many years)
6: after filling in passwords for all accounts, went to application main screen, all three panes of the main window are now blank. Confirmed that it did in fact import my accounts under Account Settings.
7: exited application and restarted (with the same profile I had imported my old profile into), all three panes are still blank. The status bar shows that it is retrieving messages. but none appear.

Actual results:

When adding a single account at initial startup of TB 112.0b4, the email from that account appeared correctly, folders in left pane, email list top right and enail view pane right bottom. Importing an existing Thunderbird profile causes the application to show three blank panels, even though the accounts have been imported.

Starting TB 112.0b4 from a terminal repeatedly shows :
ATTENTION: default value of option mesa_glthread overridden by environment.

in the terminal window.

Expected results:

Importing from an existing Thunderbird profile should display all accounts in the left panel, and that account's emails in the right-side panels.

I tried the same process (import existing profile with no accounts defined) with Daily build 113.0a1, and had the same result.

The first time I ran it, I also had a message in the console:
[Parent 103910, IPC I/O Parent] WARNING: process 104628 exited on signal 11: file /builds/worker/checkouts/gecko/ipc/chromium/src/base/process_util_posix.cc:266

Is it working with that profile in 102?

Yes, both work under 102 (profiles made with 112b4 and 113a1).

Component: Untriaged → General

Tried with 112b6 (using my 112b4 profile, as well as importing a new profile) and having the same blank windows.

As a test, I tried switching to different fonts (in case it was a font issue) but that didn't clear the problem.

  • James, are you still seeing this problem with Beta 113.0b4 (64-bit)?
  • Anything in Thunderbird's error console when it goes blank? (Tools > Developer Tools > Error console, or Ctrl+Shift+J)
  • Does this happen with ≡ > Help > Troubleshoot Mode…?
Flags: needinfo?(j.e.labarre)
OS: Unspecified → Linux

Yes, still blank panes in 113.0b4. "Troubleshoot Mode" did not change anything.

Lots of text in the error console, I'll attach here.

Flags: needinfo?(j.e.labarre)

Just tried this with 114.0b3, same problem.

Fedora 38, x86_64, Cinnamon Desktop

Additionally, checked under Mate Desktop (1.26?) and Gnome 44 under Wayland. So not a Cinnamon-specific quirk, so maybe some GTK related bug?

And additionally, this is not limited to an imported profile. Using an existing profile directly also has this issue. Using "Troubleshoot Mode" still comes up with blank panes.

This run is using an existing Thunderbird profile (profile usually run under package thunderbird-102.10.0-1.fc38.x86_64 on Fedora 38)

As a test I tried the 114.b4 beta on MSWin10, and the same problem of all blank panels occurs there as well.

This is with a profile with the same accounts as on my linux partition (I had ported the configuration over from my Linux profile).

Just as a side-note; the long-standing problem where "Copies and Folders" under account settings is unable to see any of the directories/folders on my system, showing the message "No Available Folders" instead. So the newer builds aren't even fixing the problems I have already.

Geoff, anything in attachment 9334996 [details] look relevant?

Flags: needinfo?(geoff)

(In reply to James E. LaBarre from comment #12)

...
Just as a side-note;...

Please don't post side-notes - no one looks at them, and they are a distraction to the issue of this bug that you are hoping to have solved. Thanks.

Hmm. I'm guessing here but I think there's something broken in the source profile. The original error in that log appears to be NS_MSG_INVALID_OR_MISSING_SERVER which is very unusual. I'm not even sure how that can happen.

Try exporting the profile as a file, removing the ImapMail folder from the .zip file, then importing the .zip file. Success or failure there may give us some more information.

Flags: needinfo?(geoff)

Exporting the profile from within Thunderbird gave me a bad ZIP file (Archive Manager couldn't open it), so I had to create the exported profile outside of Thunderbird (without TB running), excluding the ImapMail directory.

Importing the exported ZIP prompted for the password for each of the active email accounts, but the email window was still blank. In fact, I didn't even see the three panes, just one blank pane.

Severity: -- → S3

Just tried in TB 115.0b4, same issue exists.

Thunderbird 115.0b6, same problem still exists. No sign of change.

Same issue with the v115 release. I can see on the status line it is downloading/syncing messages.

Before I do the import the application window shows the three panes, obviously with no emails loaded into them. Once the profile is imported, all that goes away.

Checked on 116.0b2, no change

Summary: TB 112b4 window is blank after importing from existing profile → TB 112b4 (and later) window is blank after importing from existing profile
Component: General → Folder and Message Lists
Hardware: Unspecified → x86_64
Whiteboard: supernova
Version: Thunderbird 112 → Thunderbird 115

For record keeping purposes, please retain the oldest known version in the field

Version: Thunderbird 115 → Thunderbird 112

Although we associate version 115 as being "Supernova", the technical label is given only for those issues related to the 3pane changes. Import is unlikely to be related.

Whiteboard: supernova

But there isn't a problem with pre-Supernova versions. So the problem is within the newer code. And hiding it without a tag means it will never get addressed.

Running Mozregression, traced the beginning of the bug to:

7:08.80 INFO: Narrowed integration regression window from [76f62fd3, 45322ce6] (3 builds) to [76f62fd3, 5abcc135] (2 builds) (~1 steps left)
7:08.80 INFO: No more integration revisions, bisection finished.
7:08.80 INFO: Last good revision: 76f62fd3a78092592457e19dbc6e59f87c4f084d
7:08.80 INFO: First bad revision: 5abcc1359eb7d4122f958a823e29b43de5f60b2e
7:08.80 INFO: Pushlog:
https://hg.mozilla.org/comm-central/pushloghtml?fromchange=76f62fd3a78092592457e19dbc6e59f87c4f084d&tochange=5abcc1359eb7d4122f958a823e29b43de5f60b2e

Flags: needinfo?(mkmelin+mozilla)

The ash merge is in that window, so yes supernova.

Flags: needinfo?(mkmelin+mozilla)
Whiteboard: [Supernova3p]

Tested with 117.0b4, same issue still exists.

FINALLY tracked this one down.

Some time ago I had a Hotmail account set up for pop3 email (I think it required an extension at the time to get Hotmail to work in Thunderbird). Later on, once the capability came in, I created a new account for that Hotmail email to use IMAP when that became available. Eventually I moved the old pop3 mail from the separate Hotmail account over to a subfolder under "Local Folders".

Apparently there was still a remnant of the old pop3 account (a 'pop3.live.com" directory under <tbird_profile>/Mail) as well as some of the configuration in my prefs.js file. Outside of Thunderbird (with it not running) I moved the pop3.live.com directory to a subfolder I created for it under Local Folders, then removed everything for the account from prefs.js (in my case it was 'server13', 'account13', and 'id9'). Running that profile under 118.0b1 I was able to see all my folders and emails. Additionally, my problem with not being able to see filders in my account settings (as in bug 1792065) went away.

I saved a copy of the bad TBird profile if there's anything you'd like to test on it (such as just why a half-removed email account would mess things up so badly). But at least there's a workaround (not necessarily simple for the casual user though).

Flags: needinfo?(mkmelin+mozilla)

If you're willing to share the bad profile I can take a look (send me an email).

Flags: needinfo?(mkmelin+mozilla)
Severity: S3 → S2
Priority: -- → P2
See Also: → 1792065

I debugged James profile, and the problem was a hostname of "0.0.0.0." (note ending dot).
Since there was also bug 1792065 for 102, the base problem existed before as well, but it manifests itself differently in supernova.

Assignee: nobody → mkmelin+mozilla
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Target Milestone: --- → 119 Branch
OS: Linux → All
Hardware: x86_64 → All

FQDN hostnames can have an ending dot. But for an IP that wouldn't mean anything.

Blocks: 1792065
See Also: 1792065

Interesting, as I had been trying to find a hack to disable no longer active accounts [1], so that when I did a "Get all new messages" (which would retrieve emails from all email accounts) it wouldn't give an error that it couldn't log in to the account. So this stems from attempting to find an invalid servername that would cause TB to skip retrieving the account.

[1] https://bugzilla.mozilla.org/show_bug.cgi?id=348355

See Also: → 1854064
Summary: TB 112b4 (and later) window is blank after importing from existing profile → TB 112b4 (and later) window is blank after importing from existing profile where hostname was set to "0.0.0.0."

Pushed by martin@humanoids.be:
https://hg.mozilla.org/comm-central/rev/33b6830d06ed
Folder server was not found for IP hostname ending in dot. r=babolivier

Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED

Comment on attachment 9354063 [details]
Bug 1825374 - Folder server was not found for IP hostname ending in dot. r=#thunderbird-reviewers

[Approval Request Comment]
Regression caused by (bug #): unknown. Caused issues already in 102, but more severe issues in 115
User impact if declined: bland 3pane UI
Testing completed (on c-c, etc.): c-c
Risk to taking this patch (and alternatives if risky): pretty safe.

Attachment #9354063 - Flags: approval-comm-esr115?

Comment on attachment 9354063 [details]
Bug 1825374 - Folder server was not found for IP hostname ending in dot. r=#thunderbird-reviewers

[Triage Comment]
Approved for esr115
(hasn't been through beta, but has a test)

Attachment #9354063 - Flags: approval-comm-esr115? → approval-comm-esr115+
Duplicate of this bug: 1792065
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: