Bug 1825374 - Folder server was not found for IP hostname ending in dot. r=babolivier

FQDN hostnames can have an ending dot. But for an IP that wouldn't mean anything.

Differential Revision: https://phabricator.services.mozilla.com/D188691

--HG--
extra : amend_source : f3bb51b3fc19b6c82ed9882498235231129fa133