mailnews/base/test/unit/test_accountMgr2.js
@@ -24,7 +24,7 @@ add_task(async function () {
   let acc2 = MailServices.accounts.createAccount();
   acc2.incomingServer = MailServices.accounts.createIncomingServer(
     "bob_pop3",
-    "pop3.example.com",
+    "pop3.EXAMPLE.com.",
     "pop3"
   );
   let id2 = MailServices.accounts.createIdentity();
@@ -84,4 +84,21 @@ add_task(async function () {
 
   // It should have taken the imap-specific identity with it.
   Assert.equal(MailServices.accounts.allIdentities.length, 2);
+
+  // Test a special hostname.
+  let acc3 = MailServices.accounts.createAccount();
+  acc3.incomingServer = MailServices.accounts.createIncomingServer(
+    "bob_unavail",
+    "0.0.0.0.", // Note ending dot which would not do anything for an IP.
+    "pop3"
+  );
+  let id4 = MailServices.accounts.createIdentity();
+  id4.email = "bob_unavail@example.com";
+  acc3.addIdentity(id4);
+
+  Assert.equal(
+    MailServices.accounts.accounts.length,
+    3,
+    "acc3 should be in accounts"
+  );
 });
